src/objects/Patient_Follow_Up__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Patients Follow Up</relationshipLabel>
        <relationshipName>Patients_Follow_Up</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clean_Date__c</fullName>
        <label>Clean Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employed__c</fullName>
        <label>Employed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Follow_Up_Counter__c</fullName>
        <label>Follow Up Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Date__c</fullName>
        <label>Follow Up Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Status__c</fullName>
        <label>Follow Up Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Unsuccessful</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Happy_with_employment__c</fullName>
        <label>Happy with employment?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Happy_with_how_their_recovery_is_going__c</fullName>
        <label>Happy with how their recovery is going?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Alumni_attending_meetings__c</fullName>
        <label>Is Alumni attending meetings?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Patient_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Patients Follow Up (Patient Name)</relationshipLabel>
        <relationshipName>Patients_Follow_Up2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep_Name__c</fullName>
        <label>Rep Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prateek</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sober/Clean</fullName>
                </value>
                <value>
                    <fullName>Using</fullName>
                </value>
                <value>
                    <fullName>Incarcerated</fullName>
                </value>
                <value>
                    <fullName>Deceased/DNC</fullName>
                </value>
                <value>
                    <fullName>MAT</fullName>
                </value>
                <value>
                    <fullName>Checked In</fullName>
                    <isActive>false</isActive>
                    <label>Checked In</label>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                    <isActive>false</isActive>
                    <label>Scheduled</label>
                </value>
                <value>
                    <fullName>Un-Confirmed</fullName>
                    <isActive>false</isActive>
                    <label>Un-Confirmed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Patient Follow Up</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Patient_Name__c</columns>
        <columns>Follow_Up_Counter__c</columns>
        <columns>Follow_Up_Date__c</columns>
        <columns>Follow_Up_Status__c</columns>
        <columns>Rep_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>This_Month</fullName>
        <columns>NAME</columns>
        <columns>Patient_Name__c</columns>
        <columns>Follow_Up_Date__c</columns>
        <columns>Follow_Up_Status__c</columns>
        <columns>Rep_Name__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Follow_Up_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>This Month</label>
    </listViews>
    <listViews>
        <fullName>Today_s_follow_ups</fullName>
        <columns>NAME</columns>
        <columns>Patient_Name__c</columns>
        <columns>Follow_Up_Date__c</columns>
        <columns>Follow_Up_Status__c</columns>
        <columns>Rep_Name__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Follow_Up_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s follow ups</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Patient Follow Up Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patients Follow Up</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Reason_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL(Is_Alumni_attending_meetings__c, &apos;Yes&apos;) ||
ISPICKVAL(Is_Alumni_attending_meetings__c, &apos;No&apos;) ||
ISPICKVAL(Is_Alumni_attending_meetings__c, &apos;Other&apos;),
 ISBLANK(Reason__c) 
)</errorConditionFormula>
        <errorDisplayField>Is_Alumni_attending_meetings__c</errorDisplayField>
        <errorMessage>Please enter the reason.</errorMessage>
    </validationRules>
</CustomObject>